--- a/css/style-light.css
+++ b/css/style-light.css
@@ -629,7 +629,7 @@ z-index: 2;
 #services-lifting,
 #works-lifting,
 #news-lifting,
-#contact-lifting {
+contact {
 position: absolute;
 display: none;
 width: 100%;
